fixed homepage bugs with popups with outsideclick applued to errors too, fixed issue with summary popup making elements behind it unclickable

--- a/frontend/src/components/summarypost/summarypost.css
+++ b/frontend/src/components/summarypost/summarypost.css
@@ -10,6 +10,7 @@
    border-radius: 8px;
    position: relative;
    min-width: min-content;
+   pointer-events: all;
 }
 
 .cuisineDetails {
