--- a/frontend/src/pages/errorpages/notfound.css
+++ b/frontend/src/pages/errorpages/notfound.css
@@ -14,7 +14,7 @@
    height: 0; 
    border-left: 80px solid transparent;
    border-right: 80px solid transparent;
-   border-top: 20px solid yellow;
+   border-top: 20px solid gold;
    z-index: 5;
    left: 50px;
 }
