--- a/frontend/src/pages/homepage/homepage.css
+++ b/frontend/src/pages/homepage/homepage.css
@@ -23,6 +23,7 @@
    top: 1vh;
    z-index: 101;
    width: 100%;
+   pointer-events: none;
 }
 
 .summaryPop {
